# zoo-chat

./: README.md  build.sh  docker-compose.yml
geo/: Dockerfile
geo/app/: setup.py
geo/app/geo/: main.py
optimizer/app/: setup.py
orm_api/: Dockerfile  pyproject.toml
orm_api/app/: consts.py  db.py  exceptions.py  main.py  models.py  schemas.py
orm_api/app/crud/: __init__.py  bestiaries.py  compatibilities.py  pairings.py  triangles.py  users.py
orm_api/app/urls/: bestiaries.py  compatibilities.py  pairings.py  triangles.py  urls.py  users.py
parser/app/: consts.py  db.py  main.py  parser.py
tg_bot/: requirements.txt
tg_bot/app/: consts.py  db.py  handlers.py  main.py  routes.py  texts.py  utils.py  validation.py
tg_bot/users_data/: users.txt
tg_bot_2/: Dockerfile  myproject.toml
tg_bot_2/app/: config.py  main.py
tg_bot_2/app/handlers/: common.py  tech.py
